deployment/fargate.tf
resource "aws_ecs_task_definition" "backend_task" {
  family = "backend_iot_server_family"

  // Fargate is a type of ECS that requires awsvpc network_mode
  requires_compatibilities = ["FARGATE"]
  network_mode             = "awsvpc"

  // Valid sizes are shown here: https://aws.amazon.com/fargate/pricing/
  memory = "512"
  cpu    = "256"

  // Fargate requires task definitions to have an execution role ARN to support ECR images
  execution_role_arn = "${aws_iam_role.ecs_role.arn}"

  container_definitions = <<EOT
[
    {
        "name": "iot_server_container",
        "image": "423105877155.dkr.ecr.eu-central-1.amazonaws.com/ecr_repository:latest",
        "memory": 512,
        "essential": true,
        "portMappings": [
            {
                "containerPort": 3000,
                "hostPort": 3000
            },
            {
                "containerPort": 443,
                "hostPort": 443
            }
        ]
    }
]
EOT
}

resource "aws_ecs_cluster" "backend_cluster" {
  name = "backend_cluster_iot_server"
}

resource "aws_ecs_service" "backend_service" {
  name = "backend_service"

  cluster         = "${aws_ecs_cluster.backend_cluster.id}"
  task_definition = "${aws_ecs_task_definition.backend_task.arn}"

  launch_type   = "FARGATE"
  desired_count = 1

  network_configuration {
    subnets          = ["${aws_subnet.public_a.id}", "${aws_subnet.public_b.id}"]
    security_groups  = ["${aws_security_group.security_group_iot_server.id}"]
    assign_public_ip = true
  }
}
